changed the stylings

--- a/user-directory/src/components/Header/header.css
+++ b/user-directory/src/components/Header/header.css
@@ -1,9 +1,9 @@
 .header {
   padding: 30px 0;
   color: #ffffff;
-  background-color: #101d42;
+  background-color: darkblue;
   width: 100%;
   text-align: center;
-  border-bottom: 5px solid #db162f;
+  border-bottom: 5px solid green;
   margin-bottom: 10px;
 }
